    * It is now possible to re-enable any tag disabled battle menu item,
      not just specific attacks [James]
    * Fix tags menu so you can type spaces without choosing a tag [James]
    * Renamed "Store Target" to "Add targets to stored targets" to reflect
      how it actually works, and fix incorrect documentation about how
      it interacts with "Delete Stored Targets" [James]

October 28 2024 [Ichorescent]

  *** Highlights
    * Ports
      * New experimental web port (lacks save game support)
      * Steam Achievements support
      * Distribute to itch.io option
      * Commercial console ports such as Switch, PS4/5 and XBox
      * Android port doesn't currently work on Android 12 or newer
       (don't worry this will get fixed in the future)
      * Linux packages and games will now work without installing libraries
      * Builds to support ancient Win95 PCs
    * Marvellous new features and fixes, including but not limited to:
      * New battle features including Turncoat and Defector
      * New script commands including variable length extra data arrays
      * New slice features and improved slice editor GUI
      * Improved support for screen resolutions other than 320x200
      * Improved mouse/touch support
      * Improvements to both fullscreen and windowed modes
      * Debug tools including slice and script profiling
    * Source code license has been changed to Dual GPLv2+ & MIT license
    * And more, detailed below!

  *** New Features
    * Experimental Web (wasm) port! You can export your game to a .zip including
      an .html file from the Distribute Game menu. However saved games aren't
      yet kept after closing the page [Blain Maguire, Ralph, James]
    * From the "Distribute Game" menu, you can upload your game directly to
      itch.io [James]
    * gfx_fb backend (the one noone uses) supports non 320x200 games now [Ralph]
    * Custom/Game remember the window size when you quit; defaults larger [Ralph]