@@ -44,7 +44,7 @@
 	<!ELEMENT b            (#PCDATA)>
 ]>
 
-<plotscript version="wip" datecode="2024-10-03">
+<plotscript version="wip" datecode="2024-11-08">
 	<title>
 		Additional Platform Script Commands
 	</title>
