@@ -213,7 +213,7 @@ function toggleContent(target) {
 <h1>
 		Dictionary of Plotscripting Commands
 	</h1>
-<h2>For the next WIP OHRRPGCE version (nightly build 2024-10-03)</h2>
+<h2>For the next WIP OHRRPGCE version (nightly build 2024-11-08)</h2>
 		This is the documentation for all <a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting">plotscripting</a> commands.
 		In addition to reading this document, we also recommend you check out the
 		<a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting_Tutorial">Plotscripting Tutorial</a>
@@ -1349,6 +1349,7 @@ function toggleContent(target) {
 		<a href="#about-runningonmac" class="ref">running on Mac</a><br>
 		<a href="#about-runningonmobile" class="ref">running on mobile</a><br>
 		<a href="#about-runningonouya" class="ref">running on ouya</a><br>
+		<a href="#about-runningonweb" class="ref">running on web</a><br>
 		<a href="#about-runningonwindows" class="ref">running on Windows</a><br>
 		<a href="#about-runscriptbyid" class="ref">run script by ID (id, argument1, argument2, argument3...)</a><br>
 		<a href="#about-saveinslot" class="ref">save in slot (slot)</a><br>
@@ -21979,6 +21980,7 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 		<a href="#about-runningonlinux" class="ref">running on Linux</a><br>
 		<a href="#about-runningonmobile" class="ref">running on mobile</a><br>
 		<a href="#about-runningonconsole" class="ref">running on console</a><br>
+		<a href="#about-runningonweb" class="ref">running on web</a><br>
 		<a href="#about-runningonouya" class="ref">running on ouya</a><br>
 		<a href="#about-hidevirtualgamepad" class="ref">hide virtual gamepad</a><br>
 		<a href="#about-showvirtualgamepad" class="ref">show virtual gamepad</a><br>
@@ -22062,10 +22064,20 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 		</p>
 </div>
 		<div class="command">
+			<a name="about-runningonweb"></a>
+				<h4>running on web</h4>
+<p>
+			This command returns true if the game is currently running on a web browser. You should avoid using this command unless you really need it. Most games can support web without ever using this command.
+			
+			
+			
+		</p>
+</div>
+		<div class="command">
 			<a name="about-runningonouya"></a>
 				<h4>running on ouya</h4>
 <p>
-			This command returns true if the game is currently running on an OUYA console. You should avoid using this command unless you really need it. Most games can support the OUYA console without ever using this command, and even if you do need to do special scripting just for ouya, you should consider using <a href="#about-runningonconsole" class="ref">running on console</a> instead, since the only thing different about OUYA is its button names and in-app-purchase support. See the "Platform-Specific Options" menu under "Edit General Game Data".
+			This command returns true if the game is currently running on an OUYA console. Ouya is an obsolete console that is no longer generally available. You should avoid using this command unless you really need it. Most games can support the OUYA console without ever using this command, and even if you do need to do special scripting just for ouya, you should consider using <a href="#about-runningonconsole" class="ref">running on console</a> instead, since the only thing different about OUYA is its button names and in-app-purchase support. See the "Platform-Specific Options" menu under "Edit General Game Data".
 			
 			
 			
@@ -23239,7 +23251,7 @@ run key            # Alias for 'flee key'
 </div>
 		<hr>
 		</div>
-<p>Stats: There are 966 commands (of which 15 are aliases), 27 constants and 19 definitions of types and other terms in this file.</p>
+<p>Stats: There are 967 commands (of which 15 are aliases), 27 constants and 19 definitions of types and other terms in this file.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
